Implements timing infra. Does not run properly yet.

--- a/opus/Makefile
+++ b/opus/Makefile
@@ -4,11 +4,11 @@ CFLAGS+=\
 -Wall -Wextra -Wpedantic -Wformat=2 -Wswitch-default -Wswitch-enum -Wfloat-equal \
 -pedantic-errors -Werror=format-security \
 -Werror=vla \
--Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS \
+-Wp,-D_GLIBCXX_ASSERTIONS \
 -fexceptions \
 -flto -fPIE
 
-LDFLAGS+=-Wl,-z,noexecstack,-z,relro,-z,defs,-z,now,-pie
+# LDFLAGS+=-Wl,-z,noexecstack,-z,relro,-z,defs,-z,now,-pie
 LDLIBS+=-lm
 
 # optionnal sanitizers
@@ -16,7 +16,7 @@ CFLAGS += -fsanitize=undefined -fsanitize=address
 LDFLAGS += -fsanitize=undefined -fsanitize=address
 
 
-CFILES := src/helpers.c src/local_refinement.c src/logging.c src/main.c src/plu_factorization.c src/pso.c
+CFILES := src/helpers.c src/local_refinement.c src/logging.c src/main.c src/plu_factorization.c src/pso.c src/timing.c src/timing_params.c
 OBJFILES := $(CFILES:.c=.o)
 
 pgm: $(OBJFILES)
